--- a/p2p_client/app/views/rtable/index.html.erb
+++ b/p2p_client/app/views/rtable/index.html.erb
@@ -1,5 +1,3 @@
-<% if params[:search] != nil %>
-<% if params[:search] != "" %>
 <h2> Here are your search results </h2>
 <table>
   <tr>
@@ -7,7 +5,7 @@
     <th>Category</th>
     <th>Seller Ip address</th>
   </tr>
-<% @is_present = Searchresults.where("category = :ct", {:ct => cookies[:CURRCATEGORY]})%>
+<%#@is_present = Searchresults.where("category = :ct", {:ct => cookies[:CURRCATEGORY]})%>
 <% @is_present.each do |item| %>
 
   <tr>
@@ -18,5 +16,5 @@
   </tr>
 <%end%>
 </table>
-<%end%>
-<%end%>
+
+
