--- a/p2p_client/app/views/pages/payment.html.erb
+++ b/p2p_client/app/views/pages/payment.html.erb
@@ -21,4 +21,9 @@
 	<% @bidinfo = Bidding.where("item_id = ?", params[:itemid]).order("bid_amount desc").first %>
 	<% @serverPre = XMLRPC::Client.new( @bidinfo.ipaddress, "/api/xmlrpc", 3000)%>
 	<% @serverPre.call("Container.bitcoinInfo", params[:itemid], params[:bitcoin]) %>
+	<% @toChange = Notification.where("item_id = ?", params[:itemid]).all %>
+	<% @toChange.each do |change| %>
+		<% change.notification_type = 'X' %>
+		<% change.save %>
+	<%end%>
 <%end%>
