--- a/p2plogger/app/views/sellerrings/index.html.erb
+++ b/p2plogger/app/views/sellerrings/index.html.erb
@@ -50,6 +50,7 @@
   	  stroke-opacity: .6;
 	}
 </style>
+<meta http-equiv="refresh" content="5"/> 
 <script>
 var category_array = [];
 function DynamicDiv(id){
