--- a/bootstrap_server/app/views/pages/home.html.erb
+++ b/bootstrap_server/app/views/pages/home.html.erb
@@ -15,9 +15,9 @@
     <% @loggedInUser = XMLRPC::Client.new(request.env['REMOTE_ADDR'], "/api/xmlrpc", 3000) %>
     <% @loggedInUser.call2_async("Container.getIdentity", current_user.is_seller, current_user.email, request.env['REMOTE_ADDR'])%>
     <% if current_user.is_seller? %>
-        <p class="welcome-text">Offer Items and Mint Money in Minutes !! </p>
+        <p class="welcome-text">Welcome to peerBidz! </p>
     <% else %>
-        <p class="welcome-text">Shop, Bid and Celebrate !!</p>
+        <p class="welcome-text">Welcome to peerBidz!</p>
     <% end %>
 <% end %>
 
