--- a/p2p_client/app/views/items/_form.html.erb
+++ b/p2p_client/app/views/items/_form.html.erb
@@ -35,11 +35,10 @@
     <%= f.text_field :category %>
   </div>
 
-    <!-- div class="field">
-    <%#= f.label "Main Category" %><br />
-    <%#= f.select :category_id, Category.where(:parentID => nil).collect {|category| [ category.name, category.id ]} %>
-  </div -->
-  
+  <div class="field">
+    <%= f.label "Upload Photo" %><br />
+    <%= f.file_field :photo %>
+  </div>
 
   <div class="field">
     <%= f.label "End time" %><br />
