--- a/p2p_client/app/views/items/show.html.erb
+++ b/p2p_client/app/views/items/show.html.erb
@@ -33,7 +33,7 @@
 	<td> <%= @iteminfo["expires"] %> </td>
         
 	<td> <%= @iteminfo["highbid"] %> </td>
-        <td> <%= image_tag @item["image"] %> </td>
+        <td> <%= image_tag @iteminfo["image"] %> </td>
 
 </tr>
 
