--- a/p2p_client/app/views/items/show.html.erb
+++ b/p2p_client/app/views/items/show.html.erb
@@ -33,7 +33,8 @@
 	<td> <%= @iteminfo["expires"] %> </td>
         
 	<td> <%= @iteminfo["highbid"] %> </td>
-        <td> <%= image_tag @iteminfo["image"] %> </td>
+        <% @sellip = Searchresults.where("id = ?", params[:id]).first %>
+        <td> <img src="http://<%=@sellip.ipaddress%>/public<%= @iteminfo["image"] %>" ></td>
 
 </tr>
 
